--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(yijinc ${SOURCES}
         src/exception/yijinc_exception.h
         src/common/logger_macro.h)
 
+add_definitions(-D_GNU_SOURCE)
 target_compile_definitions(yijinc PRIVATE BUFFERSIZE=16777216)
 #开启DEBUG （按需开启）
 target_compile_definitions(yijinc PRIVATE DEBUG)
